# jax-gcm

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CONVECTION_TESTS_SUMMARY.md  ICON_PHYSICS_INTEGRATION.md  ICON_PHYSICS_ROADMAP.md  ICON_PHYSICS_VALIDATION_PLAN.md  JAX_CONVERSION_PATTERNS.md  JAX_gotchas.md  README-tienyiao.md  README.md  Untitled1.ipynb  analyze-output-speedy.ipynb  conftest.py  debug_tropopause.py  example_convection.py  example_icon_physics.py  generate_docs.py  icon_integration_demo.py  icon_physics_argument_consistency_report.md  inspect-output.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  setup_pythonpath.sh  surface_flux_test.py  test_convection_standalone.py  test_enhanced_radiation.py  test_icon_basic.py  test_icon_convection.py  test_tiedtke_integration.py  testnotebook.ipynb
data/: iptop.npy  qdif.npy
docs/: generate_docs.py
jcm/: .slabocean_model_test.py.swp  README.md  auxiliaries.py  boundaries.py  constants.py  convection.py  convection_test.py  date.py  date_test.py  diffusion.py  forcing.py  geometry.py  geometry_test.py  held_suarez.py  held_suarez_forcing.py  held_suarez_model.py  held_suarez_physics.py  humidity.py  humidity_test.py  land_model.py  large_scale_condensation.py  large_scale_condensation_test.py  leapfrog_filters.py  leapfrog_filters_test.py  longwave_radiation.py  longwave_radiation_test.py  main.py  mod_radcon.py  model.py  model_test.py  not-yet-converted.md  optimization.py  params.py  physical_constants.py  physics.py  physics_data.py  physics_interface.py  physics_interface_test.py  (+24 more)
(+287 files in other folders)
