[metadata]
name = jcm
author_email = dwatsonparris@ucsd.edu
license = Apache
description = JAX-based General Circulation Model


classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

keywords =
    climate
    machine-learning

[options]
packages = find:
python_requires = >=3.11
install_requires =
    jax
    dinosaur

setup_requires =
    setuptools >= 40.4
    setuptools_scm

[tool:pytest]
python_files = *_test.py
markers =
    slow: slow tests

[tool.ruff]
extend-select = ["D"]
ignore = ["D100", "D104", "D107"]